--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<a href="../../index.html">complaints and form</a>
+<a href="http://asifamin.github.io/reftest/" target="_blank">complaints and form</a>
 </body>
 </html>
