--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<a href="https://form-asifaminb.c9users.io/" target="_blank">complaints and form</a>
+<a href="https://form-asifaminb.c9users.io/">complaints and form</a>
 </body>
 </html>
