--- a/curldata/index.html
+++ b/curldata/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
 
-<!--#include virtual="includes/test.php" -->
+
+<!--#include virtual="includes/test.php?sql=SELECT%20*%20from%20%22384429ae-fd27-4448-afe6-e4ecb8d1ad93%22%20WHERE%20service%20ILIKE%20%27%pay%%27&template=table-two-col.mustache"-->
 
 
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
