--- a/angular2-master/src/index.html
+++ b/angular2-master/src/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Learn AngularJS2: The Basics</title>
+    <title>Maps Builder</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:700,400,100,200,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="css/style.css">
-
     <script src="js/lib/angular2/es6-shim.min.js"></script>
     <script src="js/lib/angular2/system-polyfills.js"></script>
     <script src="js/lib/angular2/angular2-polyfills.js"></script>
@@ -25,10 +26,113 @@
         System.import('js/boot')
                 .then(null, console.error.bind(console));
     </script>
+    <style>
+        .form-horizontal .control-label {
+            text-align: left !important;
+        }
+        form {
+            background: aliceblue;
+            padding: 1em;
+        }
+        #mapid { height: 180px; }
+    </style>
 </head>
 
 <body>
-<h1></h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#"><strong>Maps Builder</strong></a>
+        </div>
+        <!--<ul class="nav navbar-nav">-->
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <!--<li><a href="#">Page 1</a></li>-->
+            <!--<li><a href="#">Page 2</a></li>-->
+            <!--<li><a href="#">Page 3</a></li>-->
+        <!--</ul>-->
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="col-lg-6">
+        <form>
+            <fieldset>
+                <legend><strong>Data Layer</strong></legend>
+                <div class="form-group">
+                    <label for="datalayerurl">Data Layer URL</label>
+                    <input type="text" class="form-control" id="datalayerurl" placeholder="Data Layer URL">
+                </div>
+            </fieldset>
+        </form>
+        <br />
+        <br />
+        <form>
+            <fieldset>
+                <legend><strong>Map Options</strong></legend>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> Share my location
+                    </label>
+                </div>
+                <div class="form-inline">
+                    <div class="form-group">
+                        <label for="height">Height (in px)</label>
+                        <input type="text" class="form-control" id="height" placeholder="Height (in px)">
+                    </div>
+                    <div class="form-group">
+                        <label for="width">Width (in px)</label>
+                        <input type="text" class="form-control" id="width" placeholder="Width (in px)">
+                    </div>
+                </div>
+                <br />
+                <div class="form-inline">
+                    <p><strong>Center of map</strong></p>
+                    <div class="form-group">
+                        <label for="latitude">latitude</label>
+                        <input type="text" class="form-control" id="latitude" placeholder="latitude">
+                    </div>
+                    <div class="form-group">
+                        <label for="longitude" class="qg-visually-hidden">longitude</label>
+                        <input type="text" class="form-control" id="longitude" placeholder="longitude">
+                    </div>
+                </div>
+                <br />
+               <div class="form-horizontal">
+                   <div class="form-group">
+                       <label for="initialZoomLevel" class="col-sm-3 control-label text-left">Initial map zoom level</label>
+                       <div class="col-sm-5">
+                           <input type="password" class="form-control" id="initialZoomLevel" placeholder="Initial map zoom level">
+                       </div>
+                   </div>
+
+                   <div class="form-group">
+                       <label for="minZoomLevel" class="col-sm-3 control-label">Minimum map zoom level</label>
+                       <div class="col-sm-5">
+                           <input type="text" class="form-control" id="minZoomLevel" placeholder="Min map zoom level">
+                       </div>
+                   </div>
+
+                   <div class="form-group">
+                       <label for="maxZoomLevel" class="col-sm-3 control-label">Maximum map zoom level</label>
+                       <div class="col-sm-5">
+                           <input type="text" class="form-control" id="maxZoomLevel" placeholder="Max map zoom level">
+                       </div>
+                   </div>
+               </div>
+            </fieldset>
+        </form>
+        <br />
+        <button type="submit" class="btn btn-primary btn-lg">Preview</button>
+    </div>
+    <div class="col-lg-6">
+        <div id="mapid"></div>
+    </div>
+</div>
+
 <my-app>Loading...</my-app>
+<script src="../node_modules/leaflet/dist/leaflet.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script>
+    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+</script>
 </body>
 </html>
