--- a/leaflet-test/index.html
+++ b/leaflet-test/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
     <style>
-        #map{ height: 400px}
+        #map{ width:600px; height: 500px;}
     </style>
 </head>
 <body>
@@ -17,9 +17,6 @@
         url: "https://data.qld.gov.au/api/action/datastore_search_sql?sql=SELECT%20*%20from%20%228b9178e0-2995-42ad-8e55-37c15b4435a3%22"
     }).done(function( data ) {
         var rel_Data = data.result.records.map(function(item) {
-//            console.log(item.Latitude);
-//            console.log(item.Longitude);
-
             return {
             "type": "Feature",
             "properties": {
@@ -44,206 +41,18 @@
 
 
 
-    var bicycleRental = {
-        "type": "FeatureCollection",
-        "features": [
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9998241,
-                        39.7471494
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 51
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9983545,
-                        39.7502833
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 52
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9963919,
-                        39.7444271
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 54
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9960754,
-                        39.7498956
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 55
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9933717,
-                        39.7477264
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 57
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9913392,
-                        39.7432392
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 58
-            },
-            {
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [
-                        -104.9788452,
-                        39.6933755
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "popupContent": "This is a B-Cycle Station. Come pick up a bike and pay by the hour. What a deal!"
-                },
-                "id": 74
-            }
-        ]
-    };
-    var campus = {
-        "type": "Feature",
-        "properties": {
-            "popupContent": "This is the Auraria West Campus",
-            "style": {
-                weight: 2,
-                color: "#999",
-                opacity: 1,
-                fillColor: "#B0DE5C",
-                fillOpacity: 0.8
-            }
-        },
-        "geometry": {
-            "type": "MultiPolygon",
-            "coordinates": [
-                [
-                    [
-                        [-105.00432014465332, 39.74732195489861],
-                        [-105.00715255737305, 39.74620006835170],
-                        [-105.00921249389647, 39.74468219277038],
-                        [-105.01067161560059, 39.74362625960105],
-                        [-105.01195907592773, 39.74290029616054],
-                        [-105.00989913940431, 39.74078835902781],
-                        [-105.00758171081543, 39.74059036160317],
-                        [-105.00346183776855, 39.74059036160317],
-                        [-105.00097274780272, 39.74059036160317],
-                        [-105.00062942504881, 39.74072235994946],
-                        [-105.00020027160645, 39.74191033368865],
-                        [-105.00071525573731, 39.74276830198601],
-                        [-105.00097274780272, 39.74369225589818],
-                        [-105.00097274780272, 39.74461619742136],
-                        [-105.00123023986816, 39.74534214278395],
-                        [-105.00183105468751, 39.74613407445653],
-                        [-105.00432014465332, 39.74732195489861]
-                    ],[
-                    [-105.00361204147337, 39.74354376414072],
-                    [-105.00301122665405, 39.74278480127163],
-                    [-105.00221729278564, 39.74316428375108],
-                    [-105.00283956527711, 39.74390674342741],
-                    [-105.00361204147337, 39.74354376414072]
-                ]
-                ],[
-                    [
-                        [-105.00942707061768, 39.73989736613708],
-                        [-105.00942707061768, 39.73910536278566],
-                        [-105.00685214996338, 39.73923736397631],
-                        [-105.00384807586671, 39.73910536278566],
-                        [-105.00174522399902, 39.73903936209552],
-                        [-105.00041484832764, 39.73910536278566],
-                        [-105.00041484832764, 39.73979836621592],
-                        [-105.00535011291504, 39.73986436617916],
-                        [-105.00942707061768, 39.73989736613708]
-                    ]
-                ]
-            ]
-        }
-    };
 
-    var map = L.map('map').setView([-19.32585, 146.75665], 15);
 
-    L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    var map = L.map('map').setView([-19.32585, 146.75665], 5);
+
+    L.tileLayer('//server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}', {
         maxZoom: 18,
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-        '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+        '<a href="http://creativecommons.org/lic                     enses/by-sa/2.0/">CC-BY-SA</a>, ' +
         'Imagery © <a href="http://mapbox.com">Mapbox</a>',
         id: 'mapbox.light'
     }).addTo(map);
 
-    //   var someFeatures = [{
-    //     "type": "Feature",
-    //     "properties": {
-    //         "name": "Coors Field",
-    //         "show_on_map": true
-    //     },
-    //     "geometry": {
-    //         "type": "Point",
-    //         "coordinates": [-104.99404, 39.75621]
-    //     }
-    // }, {
-    //     "type": "Feature",
-    //     "properties": {
-    //         "name": "Busch Field",
-    //         "show_on_map": true
-    //     },
-    //     "geometry": {
-    //         "type": "Point",
-    //         "coordinates": [-104.98404, 39.74621]
-    //     }
-    // }];
-
-    // console.log(someFeatures);
-
-    // L.geoJson(someFeatures, {
-    //     filter: function(feature, layer) {
-    //         return feature.properties.show_on_map;
-    //     }
-    // }).addTo(map);
 
 
 </script>
